<package>
  <name>ros_color_detection</name>
  <version>0.0.1</version>
  <description>ROS Message Package for ros_color_detection</description>

  <maintainer email="">Jacques Saraydaryan</maintainer>

  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ros_color_detection_node</run_depend>
  <run_depend>ros_color_detection_msgs</run_depend>
  <run_depend>ros_color_detection_srvs</run_depend>
  <run_depend>ros_color_detection_actions</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
